<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="missingPrefix"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5">

            <ImageView
                android:src="@drawable/menu_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:scaleType="fitXY"/>

            <com.jetradarmobile.snowfall.SnowfallView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:snowflakeAlphaMax="255"
                app:snowflakeAlphaMin="225"
                app:snowflakeAngleMax="5"
                app:snowflakeImage="@drawable/money_1"
                app:snowflakeSizeMax="64dp"
                app:snowflakeSizeMin="16dp"
                app:snowflakeSpeedMax="4"
                app:snowflakeSpeedMin="1"
                app:snowflakesAlreadyFalling="false"
                app:snowflakesFadingEnabled="true"
                app:snowflakesNum="3"
                android:layout_marginBottom="40dp"/>
            <com.jetradarmobile.snowfall.SnowfallView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:snowflakeAlphaMax="255"
                app:snowflakeAlphaMin="225"
                app:snowflakeAngleMax="5"
                app:snowflakeImage="@drawable/money_2"
                app:snowflakeSizeMax="64dp"
                app:snowflakeSizeMin="16dp"
                app:snowflakeSpeedMax="4"
                app:snowflakeSpeedMin="1"
                app:snowflakesAlreadyFalling="false"
                app:snowflakesFadingEnabled="true"
                app:snowflakesNum="3"
                android:layout_marginBottom="40dp"/>
            <com.jetradarmobile.snowfall.SnowfallView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:snowflakeAlphaMax="255"
                app:snowflakeAlphaMin="225"
                app:snowflakeAngleMax="5"
                app:snowflakeImage="@drawable/money_3"
                app:snowflakeSizeMax="64dp"
                app:snowflakeSizeMin="16dp"
                app:snowflakeSpeedMax="4"
                app:snowflakeSpeedMin="1"
                app:snowflakesAlreadyFalling="false"
                app:snowflakesFadingEnabled="true"
                app:snowflakesNum="3"
                android:layout_marginBottom="40dp"/>
            <com.jetradarmobile.snowfall.SnowfallView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:snowflakeAlphaMax="255"
                app:snowflakeAlphaMin="225"
                app:snowflakeAngleMax="5"
                app:snowflakeImage="@drawable/money_4"
                app:snowflakeSizeMax="64dp"
                app:snowflakeSizeMin="16dp"
                app:snowflakeSpeedMax="4"
                app:snowflakeSpeedMin="1"
                app:snowflakesAlreadyFalling="false"
                app:snowflakesFadingEnabled="true"
                app:snowflakesNum="3"
                android:layout_marginBottom="40dp"/>
            <com.jetradarmobile.snowfall.SnowfallView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:snowflakeAlphaMax="255"
                app:snowflakeAlphaMin="225"
                app:snowflakeAngleMax="5"
                app:snowflakeImage="@drawable/money_5"
                app:snowflakeSizeMax="64dp"
                app:snowflakeSizeMin="16dp"
                app:snowflakeSpeedMax="4"
                app:snowflakeSpeedMin="1"
                app:snowflakesAlreadyFalling="false"
                app:snowflakesFadingEnabled="true"
                app:snowflakesNum="3"
                android:layout_marginBottom="40dp"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/menu_title"
                android:src="@drawable/titlepl"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".4"
                android:padding="12dp"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".1">

                <TextView
                    android:text="@string/no_ads"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:gravity="center_vertical|right"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".6"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeMinTextSize="4sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform"/>


                <ImageView
                    android:id="@+id/image_noAds"
                    android:src="@drawable/no_ads"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:scaleType="centerInside"/>

            </TableRow>

            <Button
                android:id="@+id/button_play"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight=".15"
                android:background="@drawable/menu_button"
                android:text="@string/play"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                app:autoSizeMaxTextSize="28sp"
                app:autoSizeMinTextSize="4sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />

            <Button
                android:id="@+id/button_info"
                android:text="@string/info"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".15"
                android:background="@drawable/menu_button"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:autoSizeMaxTextSize="28sp"
                app:autoSizeMinTextSize="4sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"/>

            <Button
                android:id="@+id/button_exit"
                android:text="@string/exit"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".15"
                android:background="@drawable/menu_button"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:autoSizeMaxTextSize="28sp"
                app:autoSizeMinTextSize="4sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"/>
        </LinearLayout>
    </TableRow>
</LinearLayout>
